--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     ],
     "require": {
         "yiisoft/yii2": "~2.0.14",
-        "yiisoft/yii2-bootstrap": "~2.0.0",
-        "mcomscience/datatables": "dev-master"
+        "yiisoft/yii2-bootstrap": "~2.0.0"
     },
     "autoload": {
         "psr-4": {
