--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
         "psr-4": {
             "mcomscience\\bstable\\": "src"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
